# Syne

./: .gitignore  .identity  ARCHITECTURE.md  README.md  allCode.txt  dm:A:B.json  go.mod  go.sum  main.go  myapp
.github/workflows/: windows-build.yml
cli/: chat.go
cmd/syne-ui-api/: .identity  main.go
core/app/: service.go
core/chat/: blocklist.go  chat.go  chat_test.go
core/crypto/: ecdh.go  hkdf.go  identity.go  identity_test.go  keys.go
core/discovery/: lan.go
core/history/: index.go  storage.go  storage_test.go
core/messaging/: messenger.go
core/protocol/: messages.go  messages_test.go
core/storage/: history.go
core/transport/: relay.go  tcp.go  udp.go
core/transport/p2p/: drop.go  node.go
data/contacts/: contacts.jsonl
docs/: DEV_FUNCTIONS.md
frontend/: index.html  package-lock.json  package.json
frontend/scripts/: build-sidecar.mjs  run-tauri-build.mjs
frontend/src/: App.tsx  styles.css  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/lib/: api.ts
static/: app.js  index.html  styles.css
