[package]
name = "syne-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-shell = "2.3.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
